# rust-p2p-msg

./: Cargo.toml  README.md  build.rs  msg.proto
nodes/: node0.json  node1.json
proto/: p2pmsg.proto
proto/p2p/: p2p.proto
src/: client.rs  forward.rs  main.rs  model.rs  server.rs
src/crypto/: mod.rs  sig.rs
src/peer/: forward.rs
tmp/: msg.proto
