[package]
name = "p2pmsg-tonic"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "p2pmsg-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "p2pmsg-client"
path = "src/client.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = {version="1.0.152", features = ["derive"]}

[build-dependencies]
tonic-build = "0.8"
