[package]
name = "p2pmsg-tonic"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "p2pmsg-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "p2pmsg-client"
path = "src/client.rs"

[[bin]] # main
name = "main"
path = "src/main.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = {version="1.0.152", features = ["derive"]}
elliptic-curve = { version = "0.12.3", features = ["arithmetic", "serde"] }
pem = "1"
k256 = { version = "0.11.6", features = ["ecdsa", "ecdsa-core", "pem", "keccak256"] }
clap = { version = "4.0.32", features = ["derive", "debug"] }
bincode = "1.3.3"

[build-dependencies]
tonic-build = "0.8"
